# fileurlsplit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
about/: index.html
data/: test-obs.txt  todo.txt
docs/: about.md  exceptions.md  index.md  reference.md  tests.md  validation.md
exceptions/: index.html
reference/: index.html
search/: search_index.json
src/: fileurlsplit.py
tests/: index.html  test_extensions.py  test_filename.py  test_fileurlsplit.py  test_generic_raises.py  test_name.py  test_path.py  test_platform.py  test_url.py
validation/: index.html
